## Makefile.am -- Process this file with automake to process Makefile.in

angband_files = \
  flvr-xxx.prf \
  flvr-new.prf \
  flvr-dvg.prf \
  font.prf \
  font-ami.prf \
  font-dos.prf \
  font-ibm.prf \
  font-mac.prf \
  font-win.prf \
  font-x11.prf \
  font-xxx.prf \
  graf.prf \
  graf-ami.prf \
  graf-dvg.prf \
  graf-gcu.prf \
  graf-ibm.prf \
  graf-lsl.prf \
  graf-mac.prf \
  graf-new.prf \
  graf-win.prf \
  graf-x11.prf \
  graf-xxx.prf \
  message.prf \
  pref.prf \
  pref-acn.prf \
  pref-ami.prf \
  pref-emx.prf \
  pref-gcu.prf \
  pref-mac.prf \
  pref-win.prf \
  pref-dos.prf \
  pref-x11.prf \
  user.prf \
  user-mac.prf \
  xtra-new.prf \
  xtra-dvg.prf \
  xtra-xxx.prf

EXTRA_DIST = \
  $(angband_files)

if SET_GID
angbanddir = @DEFAULT_PATH@pref

angband_DATA = \
  $(angband_files)
endif
